--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - '*'
+  pull_request:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,7 +12,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: 11
+          distribution: 'adopt'
+          architecture: x64
       - name: Build and test app
         run: ./gradlew build
       - name: Upload APK
