--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,11 @@ on:
   pull_request:
   
   workflow_dispatch:
+    inputs:
+      branch:
+        description: Branch to build app on
+        required: true
+        default: 'main'
 
 jobs:
   build:
