--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,41 +1,33 @@
-name: Build
-on:
-  push:
-    branches:
-      - fillwithjoy1-patch-one
-      - main
-    tags:
-      - '*'
+name: Artifact to Release
 
-  pull_request:
-  
+on:
+  workflow_run:
+    workflows: ["Build"]
+    types:
+      - completed
+
   workflow_dispatch:
     inputs:
-      branch:
-        description: Branch to build app on
+      description:
+        description: 'Release description'
         required: true
-        default: 'main'
+        default: 'Release created from an artifact'
 
 jobs:
-  build:
+  artifact_to_release:
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'workflow_run' && github.event.workflow_run.event == 'workflow_dispatch') }}
     steps:
 
-      - name: Checkout the code
-        uses: actions/checkout@v3
-
-      - name: Build the app
-        run: |
-          chmod +x gradlew
-          ./gradlew build
-          
-      - name: Save workflow file
-        run: |
-          mkdir -p workflow_artifacts
-          cp .github/workflows/build.yml workflow_artifacts/
-
-      - name: Upload workflow file as artifact
-        uses: actions/upload-artifact@v3.1.2
+      - name: Download artifact
+        uses: actions/github-script@v5
         with:
-          name: workflow-file
-          path: workflow_artifacts/
+          script: |
+            const { owner, repo } = context.repo;
+            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+              owner,
+              repo,
+              run_id: context.event_name === 'workflow_run' ? context.event.workflow_run.id : context.workflow_run.id,
+            });
+            const artifact = artifacts.data.artifacts.find(a => a.name === 'workflow-file');
+            if (!artifact
