--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,7 @@
 name: Build
 on:
   push:
-    branches:
-      - fillwithjoy1-patch-one
-      - main
+    branches: ['*']
     tags:
       - '*'
 
