--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "balti.xposed.pixelifygooglephotos"
+        applicationId "google.cts.enabler"
         minSdk 21
         targetSdk 31
         versionCode 5
